table + squashed some bugs

--- a/rexsiteful/rexsite/static/rexsite/styles.css
+++ b/rexsiteful/rexsite/static/rexsite/styles.css
@@ -94,10 +94,10 @@ z-index: -110;
 
 .buttonsign:hover { 
 
-background-color: rgba(0, 98, 90, 1);
-transition: all 0.3s ease;
-color: rgba(255, 255, 255, 1);
-}
+  background-color: rgba(0, 98, 90, 1);
+  transition: all 0.3s ease;
+  color: rgba(255, 255, 255, 1);
+  }
 
 .main {
 
@@ -184,4 +184,15 @@ border: 1px solid transparent;
 border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
 cursor: pointer;
 user-select: none;
+}
+
+td, tr {
+  border: 1px solid #999;
+  padding: 0.5rem;
+}
+
+table {
+  position: absolute;
+  bottom: 0;
+  padding: 15px 0;
 }
